# simple-webgpu

./: .gitmodules  CMakeLists.txt  README.md
glfw3webgpu/: glfw3webgpu.c
src/: CMakeLists.txt  app.c  simple_shader.wgsl  simple_webgpu.cpp
